Update LoginController.java